# mongo-odbc-driver-1

./: Cargo.toml  evergreen.yml
core/: Cargo.toml
core/src/: json_schema.rs  lib.rs  mock_query.rs  odbc_uri.rs  query.rs
core/src/util/: decimal128.rs  mod.rs
integration_test/tests/common/: mod.rs
macos_postinstall/src/: main.rs
odbc/: Cargo.toml
odbc-api/src/: environment.rs
odbc/src/: tests.rs  util.rs
odbc/src/api/: col_attr_describe_tests.rs  connect_attr_tests.rs  data.rs  data_tests.rs  definitions.rs  errors.rs  functions.rs  get_info_tests.rs  mod.rs
odbc/tests/common/: mod.rs
serde_test/: Cargo.toml
serde_test/src/: main.rs
widechar/src/: lib.rs
win_setupgui/: Cargo.toml
win_setupgui/src/: lib.rs
